syntax = "proto3";

package streamrpc;
option go_package="./streamrpc";

message Request {
  string ping = 1;
}

message Response {
  string pong = 1;
}

message StreamPoint {
  string name = 1;
  int32 value = 2;
}

message StreamRequest {
  StreamPoint point = 1;
}

message StreamResponse {
  StreamPoint point = 1;
}

service Streamrpc {
  rpc Ping(Request) returns(Response);
  rpc List(StreamRequest) returns (stream StreamResponse); // 服务器端流式 RPC
  rpc Record(stream StreamRequest) returns (StreamResponse); // 客户端流式 RPC
  rpc Route(stream StreamRequest) returns (stream StreamResponse); // 双向流式 RPC
}
